fix(nav): Clickable, changed z-index

--- a/src/app/index.css
+++ b/src/app/index.css
@@ -35,6 +35,7 @@
   }
 }
 #App nav {
+  z-index: 10;
   display: flex;
   text-align: left;
   position: absolute;
